# kt-demo-alarm

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_WINDOWS.md  Dockerfile  GIT_HISTORY_RECORD.md  PHASE9_COMPLETION_MEMO.md  PROJECT_REVIEW_REPORT.md  README.md  SENIOR_REVIEW_REPORT.md  SETUP_WINDOWS.md  demo_alarm.vuerd.json  docker-compose.prod.yml  docker-compose.yml  erd.json  files.txt  fix_coordinates.py  main.py  main_old.py  pyproject.toml  requirements.txt  test-docker.sh  users.db
archive/: main_stage1.py  main_stage3.py
deploy/: README.md
docs/: deploy-runbook.md  docker-free-fastapi-deploy-runbook.md  erd.md  erd.vuerd.json  jongno-server-handover-runbook.md  manual-public-server-cutover-guide.md  native-linux-deploy-guide.md  program-list.md  repository-boundary-inventory-issue-99.txt
legacy/: DEPLOYMENT.md  cloudflare-setup.sh
nginx/: nginx.conf  setup-nginx.sh
scripts/: setup-ec2.sh
sql/: test_data.sql
tests/: conftest.py  test_admin_dashboard_playwright.py  test_admin_dashboard_read_repository.py  test_admin_dashboard_schema_compat.py  test_alarm_recipient_read_repository.py  test_alarm_setting.py  test_alarm_status_service.py  test_alarm_task_repository.py  test_api_admin.py  test_api_alarms.py  test_api_basic.py  test_api_event_exposure.py  test_bus_control_fix.py  test_bus_notice.py  test_crawling_service.py  test_crawling_service_paths.py  test_database.py  test_database_bootstrap_boundaries.py  test_database_bootstrap_contract.py  test_database_compatibility_probe.py  (+31 more)
(+85 files in other folders)
