[project]
name = "kt-demo-alarm"
version = "0.1.0"
description = "KT Demo Alarm API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "python-dotenv",
    "apscheduler",
    "beautifulsoup4",
    "pdfminer.six",
    "google-generativeai",
    "pymupdf",
    "aiohttp",
    "pytz",
    "defusedxml",
    "pandas",
    "matplotlib",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
